# lark-doc-exporter

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: public-doc-e2e.yml  publish-pypi.yml  python-ci.yml
docs/superpowers/plans/: 2026-06-27-companion-skill-install.md  2026-06-27-installable-tool.md  2026-06-27-python-ci.md  2026-06-29-pypi-publish.md  2026-06-30-native-pdf-ai-footer.md  2026-06-30-public-doc-e2e.md  2026-07-02-kitup-skill-install-migration.md
docs/superpowers/specs/: 2026-06-27-companion-skill-install-design.md  2026-06-27-installable-tool-design.md  2026-06-27-python-ci-design.md  2026-06-29-pypi-publish-design.md  2026-06-30-native-pdf-ai-footer-design.md  2026-06-30-public-doc-e2e-design.md  2026-07-02-kitup-skill-install-migration-design.md
scripts/: render_html_to_pdf.mjs
src/lark_synced_export/: __init__.py  __main__.py  callout_markdown.py  cli.py  doctor.py  exporter.py  kitup_hosts.json  markdown_runtime.py  mention_markdown.py  native_pdf_footer.py  pdf_runtime.py  release_version.py  skill_install.py
src/lark_synced_export.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/lark_synced_export/skill_assets/lark-doc-exporter/: SKILL.md
src/lark_synced_export/themes/: company.css  default.css
tests/: public_doc_e2e_case.py  test_callout_markdown.py  test_cli.py  test_doctor.py  test_exporter.py  test_markdown_runtime.py  test_mention_markdown.py  test_native_pdf_footer.py  test_pdf_runtime.py  test_public_doc_e2e.py  test_release_version.py  test_skill_install.py  test_theme_resolution.py
tests/e2e_snapshots/public_doc/: result.json
tests/e2e_snapshots/public_doc/markdown/: callout.md  image.md  whiteboard.md
tests/e2e_snapshots/public_doc/pdf/: callout.txt  image_image.json  whiteboard_image.json
