[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lark-doc-exporter"
version = "0.4.0"
description = "Export Feishu/Lark docs with synced blocks to Markdown and themeable PDF"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "kitup @ git+https://github.com/spencercjh/kitup.git@a75be25#subdirectory=python",
  "markdown>=3.7,<4",
  "playwright>=1.61.0,<2",
  "pymupdf>=1.26,<2",
]

[project.scripts]
lark-doc-exporter = "lark_synced_export.cli:main"

[dependency-groups]
dev = [
  "pytest>=9,<10",
  "ruff>=0.12,<1",
]

[tool.ruff]
target-version = "py314"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lark_synced_export = [
  "kitup_hosts.json",
  "themes/*.css",
  "skill_assets/lark-doc-exporter/SKILL.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "e2e_public_doc: runs the live public document export regression lane",
]
